# godspeed-ninja

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
assets/images/backgrounds/: metadata.json
assets/images/obstacles/: metadata.json
game/: __main__.py  common.py  load.py
game/entities/: abc.py  enums.py  obstacles.py  platform.py  player.py
game/states/: climb.py  main_menu.py  world.py
game/ui/: load.py  loading_bar.py
godspeed/: __main__.py  common.py  game.py
godspeed/entities/: abc.py  obstacles.py  platform.py  player.py
godspeed/states/: abc.py  death_screen.py  enums.py  main_menu.py  manager.py  world.py
src/: game.py
src/entities/: abc.py  obstacles.py  platform.py  player.py
src/states/: world.py
